--- a/Day 10/package.json
+++ b/Day 10/package.json
@@ -5,13 +5,18 @@
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "entry.js",
   "scripts": {
     "start": "node entry.js",
+    "dev": "nodemon entry.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^5.2.1",
+    "mongoose": "^9.0.1",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.11"
   }
 }
